--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
  <body>
  	 <header>
  		<h1 class="titulo-principal">Barbearia Alura</h1>
+
+        <div class="caixa">
+            <nav>
+                    <li><a href="https://renanalura7.github.io/Barbearia-Alura/">Home</a></li>
+                    <li><a href="produtos.html">Produtos</a></li>
+                    <li><a href="contatos.html">Contato</a></li>
+            </nav>
  	 </header>
  	 <img id="banner" src="./imgs/banner.jpg">
 
