--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="caixa">
             <nav>
                     <li><a href="https://renanalura7.github.io/Barbearia-Alura/">Home</a></li>
-                    <li><a href="produtos.html">Produtos</a></li>
+                    <li><a href="https://renanalura7.github.io/Barbearia_Alura_Parte_2/">Produtos</a></li>
                     <li><a href="contatos.html">Contato</a></li>
             </nav>
  	 </header>
