--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav>
                     <li><a href="https://renanalura7.github.io/Barbearia-Alura/">Home</a></li>
                     <li><a href="https://renanalura7.github.io/Barbearia_Alura_Parte_2/">Produtos</a></li>
-                    <li><a href="contatos.html">Contato</a></li>
+                    <li><a href="https://renanalura7.github.io/Barbearia_Alura_Parte_3/">Contato</a></li>
             </nav>
  	 </header>
  	 <img id="banner" src="./imgs/banner.jpg">
