--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <meta charset="UTF-8">
 
  <head>
- 	 <link rel="stylesheet" href="style.css">
+ 	 <link rel="stylesheet" href="style-home.css">
      <title>Barbearia Alura</title>
  </head>
 
